test/syntax/39-funcall_stmt-err.c
// ======================================================================

/* funcall_stmt -> unary_expression ASSIGN call */

// ======================================================================

int fun(void) {
  return 0;
}

void main(void)
{
  int i;

  i > 1 = fun();	// error: not unary_expression
}

// ======================================================================
